// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Injector should render properly to snapshot 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderRadius": 15,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 0,
        "paddingHorizontal": 30,
        "paddingVertical": 7.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderBottomColor": "#FFFFFF",
            "color": "#FFFFFF",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Press me
      </Text>
    </View>
  </View>
</View>
`;

exports[`Injector should render properly to snapshot and hide label + pressable on not ready 1`] = `
<View
  onPress={[MockFunction]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderRadius": 15,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 0,
        "paddingHorizontal": 30,
        "paddingVertical": 7.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#FFFFFF"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
  </View>
</View>
`;
